# SHIKRA

./: README.md  create_windows_qcow2.sh  pyproject.toml  run_analysis_winrm.sh  shikra_provisioner.sh  shikra_sandbox.sh
Server_full/Shost/: DASHBOARD_UPDATED.md  DEPLOYMENT.md  ENROLLMENT_FLOW.md  HOST_FIXES_SUMMARY.md  HOST_INSTRUCTIONS.md  HOST_INSTRUCTIONS_OLD.md  MVP_ROADMAP.md  README.md  VM_CONFIG_UPDATE.md  check_agents.sh  requirements.txt  run.py  setup.sh  start_shost.sh  test_agent_connectivity.bat  test_api.sh  test_config.sh  test_enrollment.sh  test_host_v2.sh
Server_full/Shost/api/: app.py  auth.py  simple_analysis_store.py  simple_sample_store.py  simple_store.py
Server_full/Shost/api/models/: __init__.py  agent.py  analysis.py  sample.py
Server_full/Shost/api/routes/: __init__.py  admin.py  agents.py  analysis.py  enrollment.py  samples.py  snapshots.py  triggers.py  vm_config.py  vm_management.py
Server_full/Shost/api/templates/: agents_list.html  enroll_agent.html  enrollment_success.html
Server_full/Shost/config/: __init__.py  config.py
Server_full/Shost/data/: agents.json  analysis.json  samples.json
Server_full/Shost/database/: init_db.py
Server_full/Shost/tools/: README.md  agent_sim.py  agent_simulator.py  apply_config.bat  auto_register_agent.bat  auto_register_agent.ps1  configure_agent.bat  configure_agent_simple.bat  manage_enrollment.py  register_agent.py  register_from_ini.bat  test_batch_debug.bat  test_powershell_debug.ps1
Server_full/Shost/vm_manager/: __init__.py  qemu_manager.py  snapshot_manager.py
config/: memory_config.json  mitre_mapping.json  network_config.json  procmon_config.json  risk_scoring.json
config/static/: config.json
config/vm_profiles/: default.json  evasive_malware.json  paranoid.json  ransomware_analysis.json
data/: plugins.shikra
project_docs/: SHIKRA_REPORT_P1.docx
scripts/: create_vm.sh
setup/scripts/: install_dependencies.sh  network_setup.sh  setup_environment.sh
shikra-vision/: index.html  package-lock.json  package.json
shikra-vision/src/: App.css  App.jsx  index.css
shikra-vision/src/components/: AlertsPanel.jsx  Dashboard.jsx  DashboardHeader.jsx  DetailedAnalysisModal.jsx  Layout.jsx  MetricCards.jsx  NetworkFlowChart.jsx  ProcessTree.jsx  ProcessTreeVisualization.jsx  ThreatChart.jsx  ThreatTimeline.jsx  VirtualizedTable.jsx
shikra-vision/src/components/combined/: AttackTimeline.jsx  CombinedMetadata.jsx  CorrelationAnalysis.jsx  EvidenceSummary.jsx  IOCAnalysis.jsx  MITRETechniques.jsx  ThreatLandscape.jsx  TimelineAnalysis.jsx
shikra-vision/src/components/memory/: FileArtifacts.jsx  MalwareAnalysis.jsx  MemoryMetadata.jsx  MemoryRecommendations.jsx  ProcessAnalysis.jsx  RegistryAnalysis.jsx  ThreatAssessment.jsx
shikra-vision/src/components/network/: DNSAnalysis.jsx  NetworkFlowTable.jsx  NetworkMetadata.jsx  NetworkTimeline.jsx  ProtocolAnalysis.jsx  ProtocolAnomalies.jsx  ThreatHunting.jsx  ThreatIntelligence.jsx  index.js
shikra-vision/src/components/procmon/: AggregationSummary.jsx  AlertDashboard.jsx  EventAnalysis.jsx  ProcessTreeVisualization.jsx  ProcmonMetadata.jsx  ProcmonTimeline.jsx
shikra-vision/src/components/ui/: index.jsx
shikra-vision/src/hooks/: useAdvancedDataManagement.js
shikra-vision/src/pages/: CombinedReport.jsx  CombinedReport_old.jsx  MemoryAnalysis.jsx  NetworkAnalysis.jsx  ProcessMonitor.jsx  ProcessMonitor.old.jsx
shikra-vision/src/store/: cyberStore.js
shikra-vision/src/utils/: sampleData.js  theme.js
src/shikra/: __init__.py  __main__.py  cli.py  combine.py  native_zeek_automation.py
src/shikra/analysis/: __init__.py  cli.py
src/shikra/analysis/disk/: __init__.py  analyse.py  cli.py  render.py
src/shikra/analysis/memory/: analyse.py  cli.py  render.py
src/shikra/analysis/network/: analyse.py  cli.py  file_reconstructor.py  render.py  zeek_analyzer_native.py
src/shikra/analysis/network/zeek_scripts/: ransomware-detection.zeek
src/shikra/analysis/procmon/: analyse.py  cli.py  render.py
src/shikra/export/: ioc.py  timesketch.py
src/shikra/hunt/: __init__.py  __main__.py  cli.py  static_analysis.py
src/shikra/render/: overview.py
src/shikra/utils/: __init__.py  geo.py  jsonio.py  logger.py  vt.py  yara.py
